# gale_slam

./: .gitignore  CLAUDE.md  notes.txt  run_px4.launch  slam.launch  ssh_slam.launch  test.txt
FAST_LIO/config/: hesai_jt128.yaml
FAST_LIO/launch/: mapping_hesai_jt128.launch
FAST_LIO/rviz_cfg/: loam_livox.rviz
FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
HesaiLidar_ROS_2.0/config/: config.yaml
HesaiLidar_ROS_2.0/launch/: udo nmcli device set eno1 managed yes
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  change notes.md
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/config/: driver_sample_config.hpp  multi_sample_config.example.ini  sample_config.example.ini  tool_sample_config.example.ini
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/docs/: HESAI_SDK_architecture_overview.md  packet_loss_analysis.md  packet_loss_analysis_CN.md  parameter_introduction.md  parameter_introduction_CN.md  parser_features.md  parser_features_CN.md  parsing_lidar_data_online.md  parsing_lidar_data_online_CN.md  parsing_pcap_file_data_offline.md  parsing_pcap_file_data_offline_CN.md  save_point_cloud_data_as_a_las_file.md  save_point_cloud_data_as_a_las_file_CN.md  save_point_cloud_data_as_a_pcd_file.md  save_point_cloud_data_as_a_pcd_file_CN.md  use_gpu_acceleration.md  use_gpu_acceleration_CN.md  visualization_of_point_cloud_data.md  visualization_of_point_cloud_data_CN.md
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/driver/: hesai_lidar_sdk.hpp  sdk_version.hpp.in
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/: CMakeLists.txt  driver_param.h  lidar_types.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/Common/: CMakeLists.txt
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/Common/include/: hs_com.h  inner_com.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/Lidar/: CMakeLists.txt  lidar.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/Logger/: CMakeLists.txt
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/Logger/src/: logger.cc
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/PtcClient/: CMakeLists.txt
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/PtcClient/include/: ptc_client.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/PtcClient/src/: ptc_client.cc  tcp_client.cc  tcp_ssl_client.cc
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/PtcParser/include/: ptc_1_0_parser.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/PtcParser/src/: ptc_1_0_parser.cc
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/SerialClient/: CMakeLists.txt
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/SerialClient/include/: serial_client.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/SerialClient/src/: serial_client.cc
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/SerialParser/: serial_parser.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/Source/: CMakeLists.txt
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/Source/include/: pcap_source.h  serial_source.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/Source/src/: pcap_source.cc  serial_source.cc  socket_source.cc
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/UdpParser/: CMakeLists.txt  udp_parser.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/UdpParser/include/: general_parser.h  udp1_4_parser.h  udp1_8_parser.h  udp3_1_parser.h  udp3_2_parser.h  udp4_3_parser.h  udp4_7_parser.h  udp6_1_parser.h  udp7_2_parser.h  udp7_3_parser.h  udp_p40_parser.h  udp_p64_parser.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/UdpParserGpu/: CMakeLists.txt  udp_parser_gpu.cu
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/UdpParserGpu/include/: general_parser_gpu.h  general_struct_gpu.h  udp1_4_parser_gpu.h  udp1_8_parser_gpu.h  udp3_1_parser_gpu.h  udp3_2_parser_gpu.h  udp4_3_parser_gpu.h  udp4_7_parser_gpu.h  udp6_1_parser_gpu.h  udp7_2_parser_gpu.h  udp7_3_parser_gpu.h  udp_p40_parser_gpu.h  udp_p64_parser_gpu.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/UdpParserGpu/src/: general_parser_gpu.cu  udp7_3_parser_gpu.cu
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/libhesai/UdpProtocol/: fault_message.h  udp_protocol_header.h  udp_protocol_v4_3.h  udp_protocol_v4_7.h  udp_protocol_v7_3.h
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/test/: multi_test.cc  test.cc
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/tool/: CMakeLists.txt  las_tool.cc  pcl_tool.cc
HesaiLidar_ROS_2.0/src/driver/HesaiLidar_SDK_2.0/tool_ptc/: CMakeLists.txt
control/: CMakeLists.txt  nhat.rviz  package.xml  publish_pose.py  run_all_with_rviz.launch
control/config/: slam_ekf.yaml
control/geometric_controller/: CMakeLists.txt  package.xml
control/geometric_controller/launch/: multi_takeoff_vrpn.launch  takeoff_vrpn.launch
control/quadrotor_msgs/: CMakeLists.txt  package.xml
control/slam_pose_node/: CMakeLists.txt  package.xml
control/slam_pose_node/src/: vision_pose.cpp
control/src/: .publish_pose.py.swo  .publish_pose.py.swp  11publish_pose.py  22publish_pose.py  44publish_pose.py  fake_gps_set_home.py  planner2px4.py  publish_pose (another copy).py  publish_pose (copy).py  publish_pose.py  slam_pose.py  test.py  test_imu.py
control/src/old/: fake_gps_set_home.py  publish_pose.py  publish_pose2.py  publish_pose3.py  publish_pose4.py  publish_pose5.py  publish_pose6.py
microstrain_inertial/: README.md
microstrain_inertial/microstrain_inertial_description/: CHANGELOG.rst  package.xml
microstrain_inertial/microstrain_inertial_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
microstrain_inertial/microstrain_inertial_examples/: CHANGELOG.rst  package.xml
microstrain_inertial/microstrain_inertial_msgs/: CHANGELOG.rst  package.xml
record/: CMakeLists.txt  analyze_static.py  package.xml
record/launch/: fisheye_recorder.launch
record/scripts/: fisheye_recorder.py
(+6 files in other folders)
