<?xml version="1.0"?>
<package format="2">
  <name>record</name>
  <version>0.0.0</version>
  <description>Simple camera video recording helpers.</description>

  <maintainer email="gale@example.com">gale</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>
